--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -17,7 +17,16 @@
     "signUp": "Немає облікового запису? Зареєструватися",
     "fogotPass": "Забули пароль?",
     "incorrectlogin": "Пароль або емейл неправильно введені.",
-    "incorrectregister": "Користувач з таким емейлом вже існує."
+    "incorrectregister": "Користувач з таким емейлом вже існує.",
+    "confirm": "Введіть секретний код, надісланий на пошту: {{email}} щоб активувати обліковий запис.",
+    "confirmBtn": "Активувати",
+    "changeEmail": "Змінити пошту",
+    "changeEmailTitle": "Введіть пошту",
+    "changeEmailBtn": "Змінити",
+    "incorrectCode": "Секретний код, який ви ввели, неправильний.",
+    "codeLengthError": "Код має містити 4 символи.",
+    "codeFormatError": "Поле повинно мати від 2 до 20 символів (тільки літери українською та англійською мовами)",
+    "codeTelephoneError": "Поле має містити від 7 до 12 цифр"
   },
   "profile": {
     "back": "Назад",
@@ -31,5 +40,9 @@
     "logout": "Вийти",
     "lableTheme": "Тема",
     "lableMetrics": "Метрична система"
+  },
+  "weather": {
+    "searchInput": "Введіть місто",
+    "likesSitiTitle": "Збережені міста"
   }
 }
