--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,77 +1,77 @@
 {
-    "user": {
-        "name": "Ім'я",
-        "lastName": "Фамілія"
-    },
-    "app": {
-        "loading": "Завантаження...",
-        "unknownError": "Сталася неочікувана помилка. Деталі в консолі.",
-        "sportErrorLoading": "Помилка під час завантаження спортивних подій.",
-        "forecastErrorLoading": "Помилка під час завантаження прогнозу.",
-        "cityErrorLoading": "Помилка під час завантаження міста.",
-        "toMain": "На головну",
-        "tryOneMore": "Спробуйте ще раз."
-    },
-    "auth": {
-        "registration": "Реєстрація",
-        "name": "Ім'я",
-        "lastNames": "Фамілія",
-        "email": "Пошта",
-        "telephone": "Номер телефону",
-        "password": "Пароль",
-        "registrBtn": "Зареєструватись",
-        "login": "Вже є аккаунт? Увійти",
-        "signIn": "Вхід",
-        "loginBtn": "Увійти",
-        "signUp": "Немає облікового запису? Зареєструватися",
-        "fogotPass": "Забули пароль?",
-        "incorrectlogin": "Пароль або емейл неправильно введені.",
-        "incorrectregister": "Користувач з таким емейлом вже існує.",
-        "confirm": "Введіть секретний код, надісланий на пошту: {{email}} щоб активувати обліковий запис.",
-        "confirmBtn": "Активувати",
-        "changeEmail": "Змінити пошту",
-        "changeEmailTitle": "Введіть пошту",
-        "changeEmailBtn": "Змінити",
-        "incorrectCode": "Секретний код, який ви ввели, неправильний.",
-        "codeLengthError": "Код має містити 4 символи.",
-        "codeFormatError": "Поле повинно мати від 2 до 20 символів (тільки літери українською та англійською мовами)",
-        "codeTelephoneError": "Поле має містити від 7 до 12 цифр"
-    },
-    "profile": {
-        "back": "Назад",
-        "title": "Профіль",
-        "name": "Ім'я:",
-        "lastName": "Фамілія:",
-        "email": "Пошта:",
-        "telephone": "Номер телефону:",
-        "password": "Пароль:",
-        "likeSiti": "Збережені міста",
-        "logout": "Вийти",
-        "lableTheme": "Тема",
-        "lableMetrics": "Метрична система"
-    },
-    "weather": {
-        "searchInput": "Введіть місто",
-        "likesSitiTitle": "Збережені міста",
-        "noOptions": "Місто не знайдено",
-        "saveEvents": "Збережені спортивні події",
-        "currentWeatherHeader": "Поточна погода",
-        "humidity": "Вологість",
-        "cloud": "Хмарність",
-        "wind": "Вітер",
-        "directionOfTheWind": "Напрямок вітру",
-        "currentForecastHeader": "Прогноз на день",
-        "probability": "Ймовірність",
-        "hourlyForecast": "Прогноз по годинах",
-        "sportsEvent": "Спортивні події",
-        "football": "Футбол",
-        "cricket": "Крикет",
-        "golf": "Гольф",
-        "opponents": "Противники:",
-        "date": "Дата:",
-        "stadium": "Стадіон:",
-        "country": "Країна:",
-        "tournament": "Турнір:",
-        "noEvents": "Немає подій"
-    }
+  "user": {
+    "name": "Ім'я",
+    "lastName": "Фамілія"
+  },
+  "app": {
+    "loading": "Завантаження...",
+    "unknownError": "Сталася неочікувана помилка. Деталі в консолі.",
+    "sportErrorLoading": "Помилка під час завантаження спортивних подій.",
+    "forecastErrorLoading": "Помилка під час завантаження прогнозу.",
+    "cityErrorLoading": "Помилка під час завантаження міста.",
+    "toMain": "На головну",
+    "tryOneMore": "Спробуйте ще раз."
+  },
+  "auth": {
+    "registration": "Реєстрація",
+    "name": "Ім'я",
+    "lastNames": "Фамілія",
+    "email": "Пошта",
+    "telephone": "Номер телефону",
+    "password": "Пароль",
+    "registrBtn": "Зареєструватись",
+    "login": "Вже є аккаунт? Увійти",
+    "signIn": "Вхід",
+    "loginBtn": "Увійти",
+    "signUp": "Немає облікового запису? Зареєструватися",
+    "fogotPass": "Забули пароль?",
+    "incorrectlogin": "Пароль або емейл неправильно введені.",
+    "incorrectregister": "Користувач з таким емейлом вже існує.",
+    "confirm": "Введіть секретний код, надісланий на пошту: {{email}} щоб активувати обліковий запис.",
+    "confirmBtn": "Активувати",
+    "changeEmail": "Змінити пошту",
+    "changeEmailTitle": "Введіть пошту",
+    "changeEmailBtn": "Змінити",
+    "incorrectCode": "Секретний код, який ви ввели, неправильний.",
+    "codeLengthError": "Код має містити 4 символи.",
+    "codeFormatError": "Поле повинно мати від 2 до 20 символів (тільки літери українською та англійською мовами)",
+    "codeTelephoneError": "Поле має містити від 7 до 12 цифр"
+  },
+  "profile": {
+    "toMain": "Головна",
+    "title": "Профіль",
+    "name": "Ім'я:",
+    "lastName": "Фамілія:",
+    "email": "Пошта:",
+    "telephone": "Номер телефону:",
+    "password": "Пароль:",
+    "likeSiti": "Збережені міста",
+    "logout": "Вийти",
+    "lableTheme": "Тема",
+    "lableMetrics": "Метрична система"
+  },
+  "weather": {
+    "searchInput": "Введіть місто",
+    "likesSitiTitle": "Збережені міста",
+    "noOptions": "Місто не знайдено",
+    "saveEvents": "Збережені спортивні події",
+    "currentWeatherHeader": "Поточна погода",
+    "humidity": "Вологість",
+    "cloud": "Хмарність",
+    "wind": "Вітер",
+    "directionOfTheWind": "Напрямок вітру",
+    "currentForecastHeader": "Прогноз на день",
+    "probability": "Ймовірність",
+    "hourlyForecast": "Прогноз по годинах",
+    "sportsEvent": "Спортивні події",
+    "football": "Футбол",
+    "cricket": "Крикет",
+    "golf": "Гольф",
+    "opponents": "Противники:",
+    "date": "Дата:",
+    "stadium": "Стадіон:",
+    "country": "Країна:",
+    "tournament": "Турнір:",
+    "noEvents": "Немає подій"
+  }
 }
